Fix animation jumping

--- a/app/components/VideoDisplayContainer/VideoDisplayContainer.less
+++ b/app/components/VideoDisplayContainer/VideoDisplayContainer.less
@@ -1,4 +1,9 @@
 #yt-playlists-video-list-wrapper {
     transition: height 0.5s ease-out;
     overflow: hidden;
+    padding-bottom: 3px;
+
+    .shelf-content {
+        margin-bottom: 0;
+    }
 }
